# foremusic-nlp

./: .gitignore  README.md  my_requs.txt  pyproject.toml  requirements.txt  setup.py
experiments/: README.md  add_features.py  concat_feats_embeddings.py  run_base_llm.py  run_dim_red.py
src/: convert.py  divide_train_eval_test.py  divide_train_test.py  embeddings.py  features.py  filter.py  fine_tune_llm.py  helpers.py  models.py  pipeline.py  pre_process.py  train_model.py
src/configs/: base_10_dim_regression.yaml  base_10_dim_regression_sp.yaml  base_10_dim_regression_yt.yaml  base_regression.yaml  base_regression_sp.yaml  base_regression_yt.yaml  ft_regression_sp.yaml
src/data/: filter.py
src/data_prep/: divide_train_eval_test.py  filter.py  pre_process.py
src/models/: 10_dim_regression.py  decision_tree.py  dimensionality_reduction.py  fine_tune_llm.py  pca.py  regression.py  ten_dim_regression.py  train_test_fit.ipynb
